storage/innobase/ibuf/ibuf0ibuf.cc
@@ -4349,7 +4349,7 @@ loop:
 		      &pcur, &mtr);
 
 	if (!btr_pcur_is_on_user_rec(&pcur)) {
-		ut_ad(btr_pcur_is_after_last_in_tree(&pcur, &mtr));
+		ut_ad(btr_pcur_is_after_last_on_page(&pcur));
 		goto func_exit;
 	}
 
